[package]
name = "auxcast"
version = "0.1.0"
edition = "2021"

[dependencies]
cast-sender = "0.2.0"
smol-macros = "0.1"
macro_rules_attribute = "0.2"
cpal = "0.15.3"
bytemuck = "1.7.0"
anyhow = "1.0"
local-ip-address = "0.5.6"
reqwest = { version = "0.12.12"}
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
bytes = "1.5"

