[package]
name = "auxcast"
version = "1.0.0"
edition = "2021"

[dependencies]
cast-sender = "0.2.0"
smol-macros = "0.1"
macro_rules_attribute = "0.2"
cpal = "0.15.3"
bytemuck = "1.7.0"
anyhow = "1.0"
local-ip-address = "0.5.6"
reqwest = { version = "0.12.12"}
warp = "0.3"
bytes = "1.5"
tokio = { version = "~1.43.0", features = ["full"] }
ctrlc = "3.4"
async-stream = "0.3"
tokio-stream = "0.1"
dialoguer = "0.11"
mdns = "3.0.0"
futures-util = "0.3"
async-std = { version = "1.12", features = ["attributes"] }
